# Arithmetics

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  README.md  assets  build  docs  history.csv  imgui.ini  libs  tree.txt
assets/: tree_2.txt
bindings/: python_bridge.py
include/: io  net  ui
include/core/: math_parser.h  module_template.h  newton_raphson.h  numeric_methods.h  organiser.h  utilities.h
scripts/: new_module.sh
src/: io  main.cpp  net  ui
src/core/: math_parser.c  module_template.c  newton_raphson.c  numeric_methods.c  organiser.c  utilities.c
src/io/: main.c  main.cpp  main_index.cpp  numeric_methods_index.c
src/ui/: arithmetics.c  arithmetics.cpp  arithmetics1.cpp  arithmetics2.cpp
tests/: test_math_parser.cpp  test_newton_raphson.cpp  test_numeric_methods.cpp  test_organiser.cpp  test_template.cpp  test_utilities.cpp
